--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "luxon": "^1.21.3",
     "markdown-it": "^8.4.2",
     "markdown-it-anchor": "^5.2.5"
+  },
+  "dependencies": {
+    "eleventy-plugin-toc": "^1.0.1"
   }
 }
