--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "markdown-it-anchor": "^5.2.5"
   },
   "dependencies": {
+    "clean-css": "^4.2.3",
     "eleventy-plugin-toc": "^1.0.1"
   }
 }
